--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "type": "module",
+  "name": "subfluid",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.0.4",
     "@alchemy/aa-accounts": "^2.1.0",
     "@alchemy/aa-alchemy": "^2.1.0",
     "@alchemy/aa-core": "^2.0.0",
@@ -10,5 +22,16 @@
     "mocha": "^10.2.0",
     "ndb": "^0.2.4",
     "viem": "^2.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4"
   }
 }
