--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
+  "name": "",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "type": "module",
-  "name": "subfluid",
-  "version": "0.1.0",
-  "private": true,
+  "license": "AGPL-version-3.0",
+  "private": false,
+  "engines": {
+    "node": ">= 14.0.0",
+    "npm": ">= 6.0.0"
+  },
+  "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "bugs": "",
+  "keywords": [],
+  "author": {
+    "name": "",
+    "email": "",
+    "url": ""
+  },
+  "contributors": [],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "",
+    "test": ""
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
@@ -40,6 +58,10 @@
     "postcss": "^8",
     "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@alchemy/aa-accounts": "^2.1.0",
+    "@alchemy/aa-alchemy": "^2.1.0",
+    "@alchemy/aa-core": "^2.0.0",
+    "viem": "^2.2.0"
   }
 }
