--- a/package.json
+++ b/package.json
@@ -1,31 +1,12 @@
 {
-  "name": "",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "license": "AGPL-version-3.0",
-  "private": false,
-  "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
-  },
-  "homepage": "",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "bugs": "",
-  "keywords": [],
-  "author": {
-    "name": "",
-    "email": "",
-    "url": ""
-  },
-  "contributors": [],
+  "name": "subfluid",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "",
-    "test": ""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
@@ -62,6 +43,25 @@
     "@alchemy/aa-accounts": "^2.1.0",
     "@alchemy/aa-alchemy": "^2.1.0",
     "@alchemy/aa-core": "^2.0.0",
+    "@alchemy/aa-signers": "^2.0.0",
+    "@t3-oss/env-nextjs": "^0.7.3",
+    "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
+    "react": "^18",
+    "react-avatar": "^5.0.3",
+    "react-dom": "^18",
+    "sass": "^1.70.0",
     "viem": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
