--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.4",
-    "@types/mdx": "^2.0.10",
-    "classnames": "^2.5.1",
-    "next": "14.0.4",
-    "next-mdx-remote": "^4.4.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4",
     "@alchemy/aa-accounts": "^2.1.0",
     "@alchemy/aa-alchemy": "^2.1.0",
     "@alchemy/aa-core": "^2.0.0",
     "chai": "^5.0.0",
+    "classnames": "^2.5.1",
     "docopt": "^0.6.2",
     "ethers": "^6.9.2",
     "mocha": "^10.2.0",
     "ndb": "^0.2.4",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "viem": "^2.1.1"
   },
   "devDependencies": {
+    "@alchemy/aa-accounts": "^2.1.0",
+    "@alchemy/aa-alchemy": "^2.1.0",
+    "@alchemy/aa-core": "^2.0.0",
+    "@alchemy/aa-signers": "^2.0.0",
+    "@t3-oss/env-nextjs": "^0.7.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -37,14 +37,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "@alchemy/aa-accounts": "^2.1.0",
-    "@alchemy/aa-alchemy": "^2.1.0",
-    "@alchemy/aa-core": "^2.0.0",
-    "@alchemy/aa-signers": "^2.0.0",
-    "@t3-oss/env-nextjs": "^0.7.3",
-    "sass": "^1.70.0",
     "viem": "^2.2.0"
   }
 }
